implémentation de la feature création d'employé et la liste des employés

--- a/src/pages/CreateEmployee/CreateEmployee.scss
+++ b/src/pages/CreateEmployee/CreateEmployee.scss
@@ -16,6 +16,11 @@ body {
     justify-content: center;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+}
+
 label {
     display: block;
     margin-top: 1rem;
