--- a/src/pages/CreateEmployee/CreateEmployee.scss
+++ b/src/pages/CreateEmployee/CreateEmployee.scss
@@ -27,6 +27,26 @@ label {
     margin-bottom: 10px;
 }
 
+input[type=text] {
+    padding: 12px 20px;
+    box-sizing: border-box;
+
+    &:focus {
+        outline: none;
+    }
+}
+
 .address {
     margin-top: 10px;
+}
+
+button {
+    margin-top: 20px;
+    width: 50%;
+    padding: 12px 20px;
+    color: white;
+    background-color: #70B3FF;
+    border: none;
+    border-radius: 4px;
+    margin-left: 25%;
 }
