--- a/src/pages/ListEmployee/ListEmployee.scss
+++ b/src/pages/ListEmployee/ListEmployee.scss
@@ -1,3 +1,30 @@
+.list-employee {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 100vh;
+  background: url("../../assets/bg.jpg") no-repeat center;
+  z-index: -1;
+  background-size: cover;
+  
+  a {
+    text-decoration: none;
+    color: black;
+    &:hover {
+      color: #ff7070;
+    }
+  }
+
+  .container {
+    background-color: #fffbfb;
+    box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
+    padding: 10px;
+    border-radius: 10px;
+  }
+}
+
 .table-header,
 .table-footer {
   width: 90%;
@@ -45,12 +72,12 @@
       cursor: pointer;
 
       &:hover {
-        background-color: black;
+        background-color: #ff7070;
         color: white;
       }
     }
     .selected {
-      border: 1px solid black;
+      border: 1px solid #ff7070;
     }
     .disabled {
       color: gray;
@@ -62,14 +89,23 @@
 table {
   border-bottom: 1px solid black;
   border-spacing: 0;
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 
   thead {
     tr {
+    background-color: #ff7070;
+    color: #ffffff;
+    text-align: left;
+
       th {
-        padding: 5px;
+        padding: 12px 15px;
         border-bottom: 1px solid black;
         cursor: pointer;
-        background-color: rgb(189, 181, 181);
 
         img,
         .empty {
@@ -86,9 +122,18 @@ table {
     text-align: left;
 
     tr {
+      border-bottom: 1px solid #dddddd;
+
+      &:nth-of-type(even){
+        background-color: #f3f3f3;
+      }
+
+      &:last-of-type {
+        border-bottom: 2px solid #ff7070;
+      }
+
       td {
-        padding-left: 7px;
-        padding-right: 7px;
+        padding: 12px 15px;
       }
     }
   }
