--- a/src/pages/CreateEmployee/CreateEmployee.scss
+++ b/src/pages/CreateEmployee/CreateEmployee.scss
@@ -5,7 +5,10 @@ body {
 }
 
 .create-employee {
-    background: url("../../assets/bg.jpg") no-repeat center;
+    width: 100%;
+    min-height: 1200px;
+    height: 100vh;
+    background: url("../../assets/bg.jpg") repeat-y center;
     z-index: -1;
     background-size: cover;
 
@@ -38,7 +41,6 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        background-color: rgba(255, 255, 255, 0.107);
         color: #fff;
     }
     
@@ -62,6 +64,20 @@ body {
         padding: 12px 20px;
         box-sizing: border-box;
     
+        &:focus {
+            outline: none;
+        }
+    }
+
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+    input[type=number] {
+        padding: 12px 20px;
+        box-sizing: border-box;
+
         &:focus {
             outline: none;
         }
